# network

./: .clang-format  .clang-tidy  .clangd  AGENT.md  AGENTS.md  CMakeLists.txt  CMakePresets.json  README.md  main.cpp
doc/: HIGH_LEVEL_DESIGN.md  REQUIREMENTS.md  network_knowledge.md
inc/net/: net.hpp
src/: main.cpp
src/net/: net.cpp
